<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.michael.mbesplug_reflex.PlayerActivity4">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1"
        android:onClick="p4_player1_clicked"
        android:id="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView10"
        android:layout_toStartOf="@+id/textView10"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2"
        android:onClick="p4_player2_clicked"
        android:id="@+id/button10"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/button9"
        android:layout_toEndOf="@+id/textView10"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p3"
        android:onClick="p4_player3_clicked"
        android:id="@+id/button11"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p4"
        android:onClick="p4_player4_clicked"
        android:id="@+id/button12"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button11"
        android:layout_toEndOf="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
